# public_ai_repo

./: .gitignore  .gitignore+  README.md  apps.py  db.sqlite3  main.py  manage.py  pre-commit  pyproject.toml  requirements.txt  settings.py  sh-keygen -t ed25519 -C ytsuka-ne2@memoad.jp  todo.txt
.continue/rules/: new-rule-1.yaml
.github/workflows/: ci.yml  main.yml
chat/: apps.py  tasks.py  urls.py  views.py
chat/templates/chat/: chat.html  index.html  memory.html
chatproject/: settings.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: __init__.py  db_manager.py  privacy_analyzer.py
errors/: error_codes.py  error_logger.py
myproject/: urls.py
tests/: test_smoke.py
