[project]
name = "public-ai-repo"
version = "0.1.0"
description = ""
authors = [
    { name = "yutsuka123", email = "noreply@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
mypy = "^1.15.0"

